new specifications migration, entity, repository; refactoring for async db communication
