# src/routes/categories.routes.ts
@@ -1,25 +1,24 @@
 import { Router } from "express"
 import multer from "multer"
 
-import createCategoryController from "../modules/cars/useCases/createCategory"
-import importCategoriesController from "../modules/cars/useCases/importCategories"
-import listCategoriesController from "../modules/cars/useCases/listCategories"
+import { CreateCategoryController } from "../modules/cars/useCases/createCategory/CreateCategoryController"
+import { ImportCategoriesController } from "../modules/cars/useCases/importCategories/ImportCategoriesController"
+import { ListCategoriesController } from "../modules/cars/useCases/listCategories/ListCategoriesController"
 
 const categoriesRoutes = Router()
+
 const upload = multer({
     dest: "./tmp"
 })
 
-categoriesRoutes.get("/", (req, res) => {
-    return listCategoriesController().handle(req, res)
-})
+const createCategoryController = new CreateCategoryController()
+const listCategoriesController = new ListCategoriesController()
+const importCategoriesController = new ImportCategoriesController()
 
-categoriesRoutes.post("/", (req, res) => {
-    return createCategoryController().handle(req, res)
-})
+categoriesRoutes.get("/", listCategoriesController.handle)
 
-categoriesRoutes.post("/import", upload.single("file"), (req, res) => {
-    return importCategoriesController().handle(req, res)
-})
+categoriesRoutes.post("/", createCategoryController.handle)
+
+categoriesRoutes.post("/import", upload.single("file"), importCategoriesController.handle)
 
 export { categoriesRoutes }
