# src/routes/specifications.routes.ts
@@ -1,15 +1,15 @@
 import { Router } from "express"
-import { createSpecificationController } from "../modules/cars/useCases/createSpecification"
-import { listSpecificationsController } from "../modules/cars/useCases/listSpecifications"
+
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController"
+import { ListSpecificationsController } from "../modules/cars/useCases/listSpecifications/ListSpecificationsController"
 
 const specificationsRoutes = Router()
 
-specificationsRoutes.get("/", (req, res) => {
-    return listSpecificationsController.handle(req, res)
-})
+const createSpecificationController = new CreateSpecificationController()
+const listSpecificationsController = new ListSpecificationsController()
 
-specificationsRoutes.post("/", (req, res) => {
-    return createSpecificationController.handle(req, res)
-})
+specificationsRoutes.get("/", listSpecificationsController.handle)
+
+specificationsRoutes.post("/", createSpecificationController.handle)
 
 export { specificationsRoutes }
