# src/swagger.json
@@ -16,7 +16,6 @@
                 "description": "Get a list with all categories.",
                 "responses": {
                     "200": {
-                        "description": "Created category with success",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -53,16 +52,111 @@
                                 },
                                 "example": {
                                     "name": "Category",
-                                    "descriptiob": "Category of car"
+                                    "description": "Category of car"
                                 }
                             }
                         }
                     }
                 },
                 "responses": {
-                    "204": { "description": "Created category with success" },
+                    "201": { "description": "Created" },
                     "500": { "description": "Category already exists" }
                 }
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": ["Categories"],
+                "summary": "Import categories",
+                "description": "Import categories from a csv file with name & description columns, respectively",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+            "post": {
+                "tags": ["Specifications"],
+                "summary": "Create a specification",
+                "description": "Create a new specification with a name and a description",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification already exists"
+                    }
+                }
+            },
+            "get": {
+                "tags": ["Specifications"],
+                "summary": "List all specifications",
+                "description": "Get a list with all specifications.",
+                "responses": {
+                    "200": {
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": { "type": "string" },
+                                            "description": { "type": "string" }
+                                        },
+                                        "example": {
+                                            "name": "Category",
+                                            "description": "Category of car"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
+            },
+            "example": {
+                "name": "Specification",
+                "description": "Specification of car"
             }
         }
     }
